# otus-cpp-pro

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
hw1/: CMakeLists.txt
hw10/: BatchInputCommandProcessorState.cpp  BatchInputCommandProcessorState.h  CMakeLists.txt  CommandMetadata.h  CommandProcessor.cpp  CommandProcessor.h  CommandProcessorState.cpp  CommandProcessorState.h  CommandProcessorStateFabric.cpp  CommandProcessorStateFabric.h  CommandsStorage.hpp  OutputHandler.hpp  ScopedInputCommandProcessorState.cpp  ScopedInputCommandProcessorState.h  bulk_server.cpp
hw11/: CMakeLists.txt  command_handler.hpp  database.hpp  join_client.cpp  join_server.cpp  message.hpp
hw12/: CMakeLists.txt  data_provider.hpp  list_merging.hpp  main.cpp  map_func.hpp  mapper.hpp  prepare_reduce.hpp  reduce_fn.hpp  reducer.hpp  test.txt  text_file_splitter.hpp
hw13/: CMakeLists.txt  helpers.cpp  helpers.h  main.cpp  tf_classifier.cpp
hw2/: CMakeLists.txt  funcs.hpp  ip_filter.cpp  ip_filter_tests.cpp
hw3/: CMakeLists.txt  allocator.hpp  container.hpp  main.cpp
hw3/timus/: p1264.cpp  p1409.cpp  p1787.cpp  p1877.cpp  p2001.cpp
hw4/: CMakeLists.txt  print_ip.cpp
hw5/: CMakeLists.txt  Circle.hpp  CoordinatePoint.hpp  Document.hpp  DocumentController.hpp  DocumentView.hpp  GraphPrimitive.hpp  Line.hpp  main.cpp  serialization.hpp
hw6/: CMakeLists.txt  SparseMatrix.hpp  main.cpp
hw7/: BatchInputCommandProcessorState.cpp  BatchInputCommandProcessorState.h  CMakeLists.txt  CommandMetadata.h  CommandProcessor.cpp  CommandProcessor.h  CommandProcessorState.cpp  CommandProcessorState.h  CommandProcessorStateFabric.cpp  CommandProcessorStateFabric.h  OutputHandler.hpp  ScopedInputCommandProcessorState.cpp  ScopedInputCommandProcessorState.h  bulk.cpp
hw8/: CMakeLists.txt  CrcChecksumProvider.cpp  CrcChecksumProvider.h  FileMetadata.cpp  FileMetadata.h  IChecksumProvider.h  Md5ChecksumProvider.cpp  Md5ChecksumProvider.h  Parameters.cpp  Parameters.h  README.md  files_compare.cpp  files_compare.h  files_index.cpp  files_index.h  main.cpp
hw9/: BatchInputCommandProcessorState.cpp  CMakeLists.txt  CommandMetadata.h  CommandProcessor.cpp  CommandProcessor.h  ContextManager.hpp  ScopedInputCommandProcessorState.h  WaitingQueue.hpp  async.cpp  async.h  client.cpp  demo.cpp  main.cpp
